# vbap

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: atmos.rs  basic.rs  surround.rs
src/: config.rs  error.rs  lib.rs  math.rs  panner.rs  presets.rs  speaker.rs
